Add metadata, sectioning, content, text semantics

--- a/index.html
+++ b/index.html
@@ -1,8 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Meeting Minutes</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="./media/favicon.png">
   </head>
   <body>
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <section>
+            <h1 id="title" class="section-title">
+                Team 32 Meeting Minutes - 
+                <span id="date">10/09/2022</span> - 
+                Written by
+                <span id="notetaker">Steven</span>
+            </h1>
+            <div id="attendance">
+                <h2 class="section-title">Present:</h2>
+                <ul id="present">
+                    <li>Austin</li>
+                    <li>Pablo</li>
+                    <li>Tasha</li>
+                    <li>Tyrone</li>
+                    <li>Uniqua</li>
+                    <li>Naruto</li>          
+                    <li>Sasuke</li>
+                    <li>Bradley Cooper</li>
+                    <li>Pikachu</li>
+                    <li>Steven</li>
+                </ul>
+                <h2 class="section-title">Absent:</h2>
+                <ul id="absent">
+                    <li>Sasuke's Clan</li>
+                </ul>
+            </h2>
+        </section>
+        <br>
+        <hr>
+        <section>
+            <h2 id="topic">Cereal or Milk First?</h2>
+            <div id="agenda">
+                <h2 class="section-title">Agenda</h2>
+                <ol>
+                    <li>Does cereal go first, or does milk go first?</li>
+                    <li>If cereal goes first, how do we address global warming?</li>
+                    <li>If milk goes first, then how come every time we touch I get this feeling? And every time we kiss I swear I can fly?</li>
+                </ol>
+            </div>
+            <div id="notes">
+                <h2 class="section-title">From last time</h3>
+                    <p>Last meeting, we touched on the importance of synchronized swimming as a team bonding activity.</p>
+                    <ul>
+                        <li>Uniqua mentioned she cannot participate since she can't swim</li>
+                        <li>Sasuke scoffed at the idea and said, <span>"If I am forced to go, I will unleash chidori on the pool"</span></li>
+                        <li>Bradley took out his guitar and started yodeling (no comment on synchronized swimming)</li>
+                        <li><strong>Vote was split 5-5, Steven broke the tie in favor of synchronized swimming</strong></li>
+                        <li>First lesson next Monday</li>
+                    </ul>
+                <h2 class="section-title">Today's notes</h3>
+                    <p>Today, we discuss the order in which cereal and milk go in the bowl.</p>
+                    <ul>
+                        <li>Pablo thinks that milk should go first</li>
+                        <li>Naruto interjected, saying that Pablo <span>"has it twisted dattebayo"</span></li>
+                        <li>Pablo started pecking Naruto, resulting in security being called in</li>
+                        <li>After 15 minute recess, meeting resumed</li>
+                        <li>Tyrone believes that any order is fine, it is up to the person's preference</li>
+                        <li>Pikachu said <span>"pika pika pi"</span> in agreement</li>
+                        <li>Tasha brings up that if milk goes first, we save more at the pump</li>
+                        <li>Tasha's point led to murmurs and nods of agreement in the room</li>
+                        <li><b>Vote was 7-1 in favor of milk first</b>, <i>only Naruto</i> disagreed (Tyrone and Pikachu abstained)</li>
+                    </ul>
+                    <p>After agreeing that milk goes first, we then discussed why every time we touch I get this feeling? And every time we kiss I swear I can fly?</p>
+                    <ul>
+                        <li>Can't you feel my heart beat fast</li>
+                        <li>I want this to last</li>
+                        <li>Need you by my side</li>
+                        <li>Cause every time we touch</li>
+                        <li>I feel this static</li>
+                        <li>And every time we kiss</li>
+                        <li>I reach for the sky</li>
+                        <li>Can't you hear my haert beat so</li>
+                        <li>I can't let you go</li>
+                        <li>Want you in my life</li>
+                    </ul>
+                <h2 class="section-title">Miscellaneous</h3>
+                    <ul>
+                        <li>After the meeting, Bradley gathered all of us around a campfire and we sang heartwarming songs together</li>
+                        <li>I want clam chowder</li>
+                    </ul>
+            </div>
+        </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
