Add footnote media with anchors

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <h2 class="section-title">Agenda</h2>
                 <ol>
                     <li>Does cereal go first, or does milk go first?</li>
-                    <li>If cereal goes first, how do we address global warming?</li>
-                    <li>If milk goes first, then how come every time we touch I get this feeling? And every time we kiss I swear I can fly?</li>
+                    <li>If cereal goes first, how do we address global warming? <a href="#media-1">[1]</a></li>
+                    <li>If milk goes first, then how come every time we touch I get this feeling? And every time we kiss I swear I can fly? <a href="#media-2">[2]</a></li>
                 </ol>
             </div>
             <div id="notes">
@@ -87,10 +87,29 @@
                     </ul>
                 <h2 class="section-title">Miscellaneous</h3>
                     <ul>
-                        <li>After the meeting, Bradley gathered all of us around a campfire and we sang heartwarming songs together</li>
+                        <li>After the meeting, Bradley gathered all of us around a campfire and we sang heartwarming songs together <a href="#media-3">[3]</a></li>
                         <li>I want clam chowder</li>
                     </ul>
             </div>
+        </section>
+        <hr>
+        <section>
+            <h2 class="section-title">Media</h2>
+            <ol id="media">
+                <li id="media-1">
+                    <img src="./media/globalwarming.jpg">
+                </li>
+                <li id="media-2">
+                    <audio controls>
+                        <source src="./media/Cascada_-_Everytime_We_Touch.mp3">
+                    </audio>
+                </li>
+                <li id="media-3">
+                    <video controls>
+                        <source src="./media/campfire.mp4">
+                    </video>
+                </li>
+            </ol>
         </section>
     </main>
     <footer></footer>
