Make media section a details dropdown

--- a/index.html
+++ b/index.html
@@ -92,24 +92,29 @@
                     </ul>
             </div>
         </section>
+        <br>
         <hr>
         <section>
-            <h2 class="section-title">Media</h2>
-            <ol id="media">
-                <li id="media-1">
-                    <img src="./media/globalwarming.jpg">
-                </li>
-                <li id="media-2">
-                    <audio controls>
-                        <source src="./media/Cascada_-_Everytime_We_Touch.mp3">
-                    </audio>
-                </li>
-                <li id="media-3">
-                    <video controls>
-                        <source src="./media/campfire.mp4">
-                    </video>
-                </li>
-            </ol>
+            <details>
+                <summary>
+                    Media
+                </summary>
+                <ol id="media">
+                    <li id="media-1">
+                        <img src="./media/globalwarming.jpg">
+                    </li>
+                    <li id="media-2">
+                        <audio controls>
+                            <source src="./media/Cascada_-_Everytime_We_Touch.mp3">
+                        </audio>
+                    </li>
+                    <li id="media-3">
+                        <video controls>
+                            <source src="./media/campfire.mp4">
+                        </video>
+                    </li>
+                </ol>
+            </details>
         </section>
     </main>
     <footer></footer>
