--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <li>After 15 minute recess, meeting resumed</li>
                         <li>Tyrone believes that any order is fine, it is up to the person's preference</li>
                         <li>Pikachu said <span>"pika pika pi"</span> in agreement</li>
-                        <li>Tasha brings up that if milk goes first, we save more at the pump</li>
+                        <li>Tasha brings up that if <em>milk</em> goes first, we <em>save more</em> at the pump</li>
                         <li>Tasha's point led to murmurs and nods of agreement in the room</li>
                         <li><b>Vote was 7-1 in favor of milk first</b>, <i>only Naruto</i> disagreed (Tyrone and Pikachu abstained)</li>
                     </ul>
