Fix W3 validator errors

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul id="absent">
                     <li>Sasuke's Clan</li>
                 </ul>
-            </h2>
+            </div>
         </section>
         <br>
         <hr>
@@ -50,7 +50,7 @@
                 </ol>
             </div>
             <div id="notes">
-                <h2 class="section-title">From last time</h3>
+                <h2 class="section-title">From last time</h2>
                     <p>Last meeting, we touched on the importance of synchronized swimming as a team bonding activity.</p>
                     <ul>
                         <li>Uniqua mentioned she cannot participate since she can't swim</li>
@@ -59,7 +59,7 @@
                         <li><strong>Vote was split 5-5, Steven broke the tie in favor of synchronized swimming</strong></li>
                         <li>First lesson next Monday</li>
                     </ul>
-                <h2 class="section-title">Today's notes</h3>
+                <h2 class="section-title">Today's notes</h2>
                     <p>Today, we discuss the order in which cereal and milk go in the bowl.</p>
                     <ul>
                         <li>Pablo thinks that milk should go first</li>
@@ -85,7 +85,7 @@
                         <li>I can't let you go</li>
                         <li>Want you in my life</li>
                     </ul>
-                <h2 class="section-title">Miscellaneous</h3>
+                <h2 class="section-title">Miscellaneous</h2>
                     <ul>
                         <li>After the meeting, Bradley gathered all of us around a campfire and we sang heartwarming songs together <a href="#media-3">[3]</a></li>
                         <li>I want clam chowder</li>
@@ -101,7 +101,7 @@
                 </summary>
                 <ol id="media">
                     <li id="media-1">
-                        <img src="./media/globalwarming.jpg">
+                        <img src="./media/globalwarming.jpg" alt="Earth exploding">
                     </li>
                     <li id="media-2">
                         <audio controls>
@@ -119,7 +119,7 @@
         </section>
         <hr>
         <section>
-            <form action="" method="get">
+            <form>
                 <fieldset>
                     <legend>Want to join our mailing list?</legend>
                     <div>
@@ -142,8 +142,8 @@
                                 <label for="form-gift-1">Apple (fruit)</label>
                             </div>
                             <div>
-                                <input type="radio" id="form-gift-1" name="form-gift">
-                                <label for="form-gift-2>">Apple (phone)</label>
+                                <input type="radio" id="form-gift-2" name="form-gift">
+                                <label for="form-gift-2">Apple (phone)</label>
                             </div>
                         </fieldset>
                     </div>
