Make attendance section semantic

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
                 Written by
                 <span id="notetaker">Steven</span>
             </h2>
+        </section>
+        <section>
+            <h3 class="section-title">Attendance</h3>
             <div id="attendance">
-                <h3 class="section-title">Present:</h3>
+                <h4 class="section-title">Present:</h4>
                 <ul id="present">
                     <li>Austin</li>
                     <li>Pablo</li>
@@ -38,7 +41,7 @@
                     <li>Pikachu</li>
                     <li>Steven</li>
                 </ul>
-                <h3 class="section-title">Absent:</h3>
+                <h4 class="section-title">Absent:</h4>
                 <ul id="absent">
                     <li>Sasuke's Clan</li>
                 </ul>
