Replace section <br> with more semantic <br>

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
                 </ul>
             </div>
         </section>
-        <br>
         <hr>
         <section>
             <h3 id="topic">Cereal or Milk First?</h3>
@@ -84,16 +83,18 @@
                     </ul>
                     <p>After agreeing that milk goes first, we then discussed why every time we touch I get this feeling? And every time we kiss I swear I can fly?</p>
                     <ul>
-                        <li>Can't you feel my heart beat fast</li>
-                        <li>I want this to last</li>
-                        <li>Need you by my side</li>
-                        <li>Cause every time we touch</li>
-                        <li>I feel this static</li>
-                        <li>And every time we kiss</li>
-                        <li>I reach for the sky</li>
-                        <li>Can't you hear my haert beat so</li>
-                        <li>I can't let you go</li>
-                        <li>Want you in my life</li>
+                        <li>
+                            Can't you feel my heart beat fast <br>
+                            I want this to last <br>
+                            Need you by my side <br>
+                            Cause every time we touch <br>
+                            I feel this static <br>
+                            And every time we kiss <br>
+                            I reach for the sky <br>
+                            Can't you hear my heart beat so <br>
+                            I can't let you go <br>
+                            Want you in my life <br>
+                        </li>
                     </ul>
                 <h3 class="section-title">Miscellaneous</h3>
                     <ul>
@@ -102,7 +103,6 @@
                     </ul>
             </div>
         </section>
-        <br>
         <hr>
         <section>
             <details>
@@ -125,7 +125,7 @@
                     </li>
                 </ol>
             </details>
-            <br>
+
         </section>
         <hr>
         <section>
