Update heading levels and section titles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <hr>
         <section>
-            <h3 id="topic">Cereal or Milk First?</h3>
+            <h2 id="topic">Cereal or Milk First?</h2>
             <div id="agenda">
                 <h3 class="section-title">Agenda</h3>
                 <ol>
@@ -105,10 +105,9 @@
         </section>
         <hr>
         <section>
+            <h2 class="section-title">Footnotes</h2>
             <details>
-                <summary>
-                    Media
-                </summary>
+                <summary>Media</summary>
                 <ol id="media">
                     <li id="media-1">
                         <img src="./media/globalwarming.jpg" alt="Earth exploding">
