Add placeholder text in form

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <label for="form-textarea">Finally, tell us a little about yourself:</label>
                 </div>
                 <div>
-                    <textarea id="form-textarea"></textarea>
+                    <textarea id="form-textarea" placeholder="I was born in a pineapple under the sea..."></textarea>
                 </div>
                 <div>
                     <input type="checkbox" id="form-checkbox-1" required>
