Include and use a 3rd party font Fixes #28

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Meeting Minutes</title>
     <meta charset="UTF-8">
     <link rel="icon" href="./media/favicon.png">
+    <link rel="stylesheet" href ="styles.css">
   </head>
   <body>
     <header>
