Add section-title class to topic

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
         <hr>
         <section>
-            <h2 id="topic">Cereal or Milk First?</h2>
+            <h2 id="topic" class="section-title">Cereal or Milk First?</h2>
             <div id="agenda">
                 <h3 class="section-title">Agenda</h3>
                 <ol>
