Add two gift options

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
                 <div>
                     <fieldset>
                         <legend>Choose your free birthday gift for joining our mailing list!</legend>
-                        <div>
                             <input type="radio" id="form-gift-1" name="form-gift">
                             <label for="form-gift-1">Apple (fruit)</label>
-                        </div>
-                        <div>
                             <input type="radio" id="form-gift-2" name="form-gift">
                             <label for="form-gift-2">Apple (phone)</label>
-                        </div>
+                            <input type="radio" id="form-gift-3" name="form-gift">
+                            <label for="form-gift-3">Android (phone)</label>
+                            <input type="radio" id="form-gift-4" name="form-gift">
+                            <label for="form-gift-4">Android (evil robot)</label>
                     </fieldset>
                 </div>
                 <div>
