Add containers for form gifts

--- a/index.html
+++ b/index.html
@@ -148,14 +148,22 @@
                 <div>
                     <fieldset>
                         <legend>Choose your free birthday gift for joining our mailing list!</legend>
-                            <input type="radio" id="form-gift-1" name="form-gift">
-                            <label for="form-gift-1">Apple (fruit)</label>
-                            <input type="radio" id="form-gift-2" name="form-gift">
-                            <label for="form-gift-2">Apple (phone)</label>
-                            <input type="radio" id="form-gift-3" name="form-gift">
-                            <label for="form-gift-3">Android (phone)</label>
-                            <input type="radio" id="form-gift-4" name="form-gift">
-                            <label for="form-gift-4">Android (evil robot)</label>
+                            <div id="form-gift-1-container">
+                                <input type="radio" id="form-gift-1" name="form-gift">
+                                <label for="form-gift-1">Apple (fruit)</label>
+                            </div>
+                            <div id="form-gift-2-container">
+                                <input type="radio" id="form-gift-2" name="form-gift">
+                                <label for="form-gift-2">Apple (phone)</label>
+                            </div>
+                            <div id="form-gift-3-container">
+                                <input type="radio" id="form-gift-3" name="form-gift">
+                                <label for="form-gift-3">Android (phone)</label>
+                            </div>
+                            <div id="form-gift-4-container">
+                                <input type="radio" id="form-gift-4" name="form-gift">
+                                <label for="form-gift-4">Android (evil robot)</label>
+                            </div>         
                     </fieldset>
                 </div>
                 <div>
