--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="">10/02/2022 Minutes</a></li>
             </ul>
         </nav>
+        <img src="./media/cat.jpg" id="cat" alt="cat">
     </header>
     <hr>
     <main>
