Add cat that shows up only when viewport is small

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="">10/02/2022 Minutes</a></li>
             </ul>
         </nav>
+        <img src="./media/hi.jpg" id="hi" alt="hi cat">
     </header>
     <hr>
     <main>
