Add styling for quotes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p>Last meeting, we touched on the importance of synchronized swimming as a team bonding activity.</p>
                     <ul>
                         <li>Uniqua mentioned she cannot participate since she can't swim</li>
-                        <li>Sasuke scoffed at the idea and said, <span>"If I am forced to go, I will unleash chidori on the pool"</span></li>
+                        <li>Sasuke scoffed at the idea and said, <span class="quote">"If I am forced to go, I will unleash chidori on the pool"</span></li>
                         <li>Bradley took out his guitar and started yodeling (no comment on synchronized swimming)</li>
                         <li><strong>Vote was split 5-5, Steven broke the tie in favor of synchronized swimming</strong></li>
                         <li>First lesson next Monday</li>
@@ -76,11 +76,11 @@
                     <p>Today, we discuss the order in which cereal and milk go in the bowl.</p>
                     <ul>
                         <li>Pablo thinks that milk should go first</li>
-                        <li>Naruto interjected, saying that Pablo <span>"has it twisted dattebayo"</span></li>
+                        <li>Naruto interjected, saying that Pablo <span class="quote">"has it twisted dattebayo"</span></li>
                         <li>Pablo started pecking Naruto, resulting in security being called in</li>
                         <li>After 15 minute recess, meeting resumed</li>
                         <li>Tyrone believes that any order is fine, it is up to the person's preference</li>
-                        <li>Pikachu said <span>"pika pika pi"</span> in agreement</li>
+                        <li>Pikachu said <span class="quote">"pika pika pi"</span> in agreement</li>
                         <li>Tasha brings up that if <em>milk</em> goes first, we <em>save more</em> at the pump</li>
                         <li>Tasha's point led to murmurs and nods of agreement in the room</li>
                         <li><b>Vote was 7-1 in favor of milk first</b>, <i>only Naruto</i> disagreed (Tyrone and Pikachu abstained)</li>
